# waypoint_based_destructible_terrain

./: Cargo.toml  README.md  checklist.sh  constants.py  index.html  player.py  test_waypoint_based_destructible_terrain.py  waypoint_based_2d_destructible_terrain.js  waypoint_based_destructible_terrain.js  waypoint_based_destructible_terrain.py
rusty-clonk/: README.md
rusty-clonk/src/: main.rs
src/: lib.rs  main.rs
