[package]
name = "waypoint_based_destructible_terrain"
version = "0.15.0"
authors = ["Armin Schäfer"]
readme = "README.md"
edition = "2021"
keywords = ["Indie"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
